# dice10000

./: Cargo.toml  README.md  dice10000.yaml
src/: game.rs  main.rs  player.rs
