[package]
name = "dice10000"
version = "0.1.0"
authors = ["harveyrook <harveyrook@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
